--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>menu-am</title>
-  <link rel="stylesheet" href="/menu.css">
+  <link rel="stylesheet" href="menu.css">
 
 
 </head>
@@ -36,7 +36,7 @@
     document.getElementById("myframe").src = "am/amnew.html";
   }
   function myFunction3() {
-    document.getElementById("myframe").src = "Ety-am/teeatta2.html";
+    document.getElementById("myframe").src = "etyam/teeatta2.html";
   }
   </script>
   </script>
