--- a/am/amnew.html
+++ b/am/amnew.html
@@ -4,11 +4,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Amaurobiidae Morphology</title>
-<link type="text/css" href="./media.css" rel="stylesheet"/>
+<link type="text/css" href="media.css" rel="stylesheet"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./pop.css">
-<link rel="stylesheet" href="./brodal.css">
-<link rel="stylesheet" href="./tooltip.css">
+<link rel="stylesheet" href="pop.css">
+<link rel="stylesheet" href="brodal.css">
+<link rel="stylesheet" href="tooltip.css">
 
 
 <style type="text/css">
