--- a/am/amnew.html
+++ b/am/amnew.html
@@ -686,13 +686,13 @@ data-target="4.49m 13.18m -74.96m">
 
 
   <script src='js/ajax 2.2.2.js'></script>
-  <script  src="./simpmod.js"></script>
+  <script  src="simpmod.js"></script>
   <script src='js/buttstrap.js'></script>
   <script type="module" src="js/viewer.js"></script>
- <script  src="./brodal.js"></script>
+ <script  src="brodal.js"></script>
   <script src='js/tween.js' crossorigin></script>
   <script  src="js/mods.js"></script>
-  <script  src="./tooltip.js"></script>
+  <script  src="tooltip.js"></script>
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Ephesis&family=Petit+Formal+Script&family=Shadows+Into+Light&family=Tangerine:wght@700&display=swap" rel="stylesheet"crossorigin>
