--- a/am/amnew.html
+++ b/am/amnew.html
@@ -434,26 +434,28 @@ border:none"></button></a>
   
   <div class="brodal-close" style="position:absolute; margin-left:-35vw;padding-right:140vw;z-index:89!important;margin-top:-60vh; height:160vh;background-color:rgba(255, 192, 203, 0)"></div>
 
-  <div class="brodal-container" style="background-image: url(images/card.webp);background-size: 100% 100%; width:90vw; z-index: 120; position:absolute; margin-left:4vw; transform: scaleY(1.3) translateY(2vh) !important;">
+  <div class="brodal-container" style=" width:90vw; z-index: 120; position:absolute; margin-left:4vw;">
 
 
-    <div class="hideme"></div>
+ 
       <!--TITLE-->
    <img class="palp-pic" src="images/crib.svg" style="margin-top:-20vh; position:absolute; width:28vw; margin-left:66vw; z-index:55;">
 
-   <div class="crib-text">
+  <div class="bro-baby" style="width:35vw !important; background-image: url(images/crib2.jpg);background-size:100% 100%; position:absolute;margin-left:2.5vw; margin-top:-40vh;height:300px; width:300px; border-radius: 50%;clip-path: circle(37% at 50% 50%);"></div>
+
+   <div  class="text" style="background-image: url(images/card.webp);background-size: 100% 100%; font-family: 'RobotoMono-Thin'; font-size: 2vh;padding:2%; color:white;margin-top:10vh;">
   
     The Cribellum, when present, is  located underneath the spinnerets, it has a similar appearance to the rough pad of a cats' paw. The Cribellum and Calamistrum, like violin and bow, are used together to pluck the fine silk into a 'wooly' texture.
     Not all spiders have a cribellum, not even all Amaurobiids have one. <br><br>At one stage all cribellate spiders were placed into a single family, this was further refined to full and divided cribellum.  Eventually it was not regarded as the sole diagnostic and members were placed into other families.<p style="display:inline;text-decoration: underline; cursor:pointer;" href="#shmodal4" class="open-shmodal">(Lehtinen_1967)</p> 
     <br>
     <br> 
    V. T. Davies' papers seems to suggest all tasmanian genera are ecribellate  (without cribellum). <br><br>
-   <a style="display:inline;text-decoration: underline; cursor:pointer; font-size:0.5vw" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxadjG_y3YcwsVyjNWBw7Z8IV7DLRJpcUo7HFwX_4egWuZOsUr6P-cmqUCr03EUAckSsg&usqp=CAU" target="_new">Image (cc)google thumb-nail direct share</a>
+   <a style="display:inline; font-size:0.8vw"> The Royal Society - Anna-Christin Joel, Ingo Scholz, Linda Orth, Peter Kappel and Werner Baumgartner -</a>  <a style="display:inline;text-decoration: underline; cursor:pointer; font-size:0.7vw; color:white;" href="images/crib2.jpg" target="_new">click to view</a>  <a style="display:inline; font-size:0.8vw"> 'democratising knowledge'-thankyou. </a>
+ 
 
     </div>
       
 
-  <div class="bro-baby" style="width:25vw !important; background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxadjG_y3YcwsVyjNWBw7Z8IV7DLRJpcUo7HFwX_4egWuZOsUr6P-cmqUCr03EUAckSsg&usqp=CAU); background-color: transparent;background-size:100% 100%; position:absolute;margin-left:2.5vw; margin-top:-60vh;height:30vh; border-radius: 50%;"></div>
 
 
      
