--- a/am/amnew.html
+++ b/am/amnew.html
@@ -402,7 +402,7 @@ border:none"></button></a>
   <!--=======================  CLAW BRODAL =======================================================-->
 <div fetchpriority="low" class="brodal-page brodal" id="brodal-claw" style="height:70vh;padding:none !important">
 
-<div class="brodal-close" style="position:absolute; margin-left:-20vw !important; padding-right:48vw; z-index:120 !important; margin-top:35vh; height:60vh; background-color: rgba(255, 192, 203, 0); width:100vw !important; filter: blur(12px);
+<div class="brodal-close" style="position:absolute; margin-left:-20vw !important; padding-right:48vw; z-index:120 !important; margin-top:40vh; height:60vh; background-color: rgba(255, 192, 203, 0); width:100vw !important; filter: blur(12px);
   -webkit-filter: blur(12px);"></div>
 
 <iframe scrolling="no" class="spot" src="spotlight.html" style="position:absolute; height:110vh; width:50vw; position:absolute; z-index:119; margin-left:40vw; border:none; margin-top:0vh;"></iframe> 
@@ -413,8 +413,9 @@ border:none"></button></a>
 
 <div class="brodal-container" style="background-image: url(images/card.webp);background-size: 100% 100%; width:90vw;position:absolute; z-index:115;margin-left:5vw; margin-top:2vh;">
 
-  <div class="claw-text" style=" width:65vw;position:fixed;margin-top:3vh; box-sizing: content-box; display: inline;margin-left:20vw;"> Two paired claws and an accessory.  V.T.Davies  Tasmanian Amaurobiidae descriptions note the presence of three claws but do not describe or illustrate them.  Thus of the four genera only Oztira has visual authenticity of this trait, appearing in G.A.Milledge's paper(link below).</a> The image to the left is Oztira affinis from Milledge's article.  The 3d-model is also O. affinis.  <br><br>
-    <a href="#shmodal3" class="open-shmodal">Milledge-Oztira.</a></div>
+  <div class="claw-text" style=" width:65vw;position:fixed;margin-top:3vh; box-sizing: content-box; display: inline;margin-left:20vw;font-family: 'RobotoMono-Thin';"> Two paired claws and an accessory.  V.T.Davies  Tasmanian Amaurobiidae descriptions note the presence of three claws but do not describe or illustrate them.  Thus of the four genera only Oztira has visual authenticity of this trait, appearing in G.A.Milledge's paper(link below).</a> The image to the left is Oztira affinis from Milledge's article.  The 3d-model is also O. affinis.  <br><br>
+    <a href="#shmodal3" class="open-shmodal">Milledge-Oztira.</a> <br><br> <a style="display:inline; font-size:0.8vw; color:white;"> Several sites copyright Milledge's paper and the picture here, however biodiversitylibrary have released it under a CC liscence</a>  <a style="display:inline;text-decoration: underline; cursor:pointer; font-size:0.7vw; color:white;" href="https://www.biodiversitylibrary.org/part/303323" target="_new">click here to get a copy</a>  <a style="display:inline; font-size:0.8vw"> # biodiversitylibrary 'democratising knowledge' </a></div>
+  
 
   <div class="brodal-header"><div class="textdc">3 Claws</div><div class="textdc2">3 Claws</div>
     </div> 
