--- a/am/amnew.html
+++ b/am/amnew.html
@@ -556,24 +556,27 @@ curved.' <br><br>
 
   <div class="brodal-page brodal" id="brodal-cal">
  
-    <div class="brodal-container" style="background-image: url(images/card.webp);background-size: 100% 100%; width:90vw;margin-top:2vh;">
+    <div class="brodal-container" style=" width:90vw;margin-top:2vh;">
 
       <div class="textd">Calamistrum</div><div class="textd2">Calamistrum</div>
       <div class="hideme"></div>
         <!--TITLE-->
 
 
-      <div class="palp-text" style=" width:90vw;position:fixed;margin-top:-5vh; box-sizing: content-box; display: inline-flex;">   
+      <div class="palp-text" style=" width:90vw;position:fixed;margin-top:-13vh; box-sizing: content-box; display: inline-flex; font-size: 1vh !important;">   
 
-<div class="bub" style="box-sizing: border-box;width:50vw; height:30vh;margin-left:-10vw;">
-        <div class="bro-baby" style="width:700px!important; background-color: grey; position:absolute; margin-left:-10.5vw; margin-top:5vh;clip-path: circle(20% at 50% 50%);height:250px;">
+<div class="bub" style="box-sizing: border-box;width:50vw; height:30vh;margin-left:-10vw;margin-top:2vh;">
+        <div class="bro-baby" style="width:700px!important; background-color: grey; position:absolute; margin-left:-15.5vw; margin-top:5vh;clip-path: circle(20% at 50% 50%);height:250px;">
 
-         <div class="bro-baby" style="width:700px !important; background-image: url(https://royalsocietypublishing.org/cms/asset/f8945a8c-ae00-49ee-8da7-6acf473810ea/rsos150617f03.jpg); background-size:100% 100%;height:250px; position:absolute;margin-left:0.5vw; margin-top:5vh;background-position-y:1vh ;"></div></div></div>
+         <div class="bro-baby" style="width:300px !important; background-image: url(images/cal.jpg); background-size:100% 100%;height:250px; position:absolute;margin-left:260px; margin-top:10px;background-position-y:1vh ;"></div></div></div>
   
-        <ul class="calwords" style="margin-left:20w; padding-right:5vw; padding-top:9vh;  font-family: 'RobotoMono-Thin'; font-size: medium;">
+        <ul class="calwords" style="margin-left:20w; padding-top:2vw; padding-bottom:2vw; padding-left:4vw; padding-right:4vw; font-family: 'RobotoMono-Thin'; font-size: 2.5vh;background-image: url(images/card.webp);background-size: 100% 100%;margin-top:10vh; width:70vw">
+
 Every Swiss-army-spider holsters a back leg mo-hawk for silk manufacture on the fly.<br>
 Sadly evolutionary cutbacks omitted this feature in the Tasmanian Amaurobiids.  They do, however, have modified stiff hairs for preening.<br><br>
-Image from article by Anna-Christin Joel with much thanks - The Royal Society<a href="https://royalsocietypublishing.org/doi/10.1098/rsos.150617#pane-pcw-references" target="_new"> click to view</a>
+
+<a style="display:inline; font-size:0.9vw; color:white;"> Image from publication by Jaromir Hajer in Israel Journal of Entomology 
+with appreciation <a style="display:inline; font-size:0.9vw; color:white;" href="https://www.researchgate.net/figure/Cribellum-and-calamistrum-of-the-second-nymphal-stage-a-detail-of-the-surface-of-the_fig6_318795304" target="_new"> click to view</a>
 
      </ul>   
         </div> 
